# persistent-project-m36

./: .gitignore  ChangeLog.md  README.md  package.yaml  persistent-project-m36.cabal  stack.yaml
Database/Persist/: ProjectM36.hs
test/: Model.hs  Spec.hs
